@@ -19,6 +19,8 @@ package org.springframework.osgi.test.parsing;
 import java.lang.reflect.Field;
 import java.util.jar.Manifest;
 
+import javax.print.event.PrintEvent;
+
 import junit.framework.TestCase;
 
 import org.osgi.framework.Constants;
@@ -30,8 +32,8 @@ import org.springframework.osgi.test.parsing.packageZ.FinalTestClassTest;
 import org.springframework.util.ObjectUtils;
 
 /**
- * Integration that checks if the class hierarchy is properly parsed. Note this
- * test doesn't run in OSGi, it just invokes the bytecode parsing.
+ * Integration that checks if the class hierarchy is properly parsed. Note this test doesn't run in OSGi, it just
+ * invokes the bytecode parsing.
  * 
  * @author Costin Leau
  * 
@@ -49,10 +51,10 @@ public class DifferentParentsInDifferentBundlesTest extends TestCase {
 		// check parent package
 		// parent in a different bundle
 		assertTrue("missing parent package not considered", contains(importPackage,
-			BaseClassFromAnotherPackageAndBundleTest.class.getPackage().getName()));
+				BaseClassFromAnotherPackageAndBundleTest.class.getPackage().getName()));
 		// parent in a different package but the same bundle (i.e. no import)
-		assertFalse("contained parent not considered", contains(importPackage,
-			BaseClassFromAnotherPackageTest.class.getPackage().getName()));
+		assertFalse("contained parent not considered", contains(importPackage, BaseClassFromAnotherPackageTest.class
+				.getPackage().getName()));
 		// check present parent dependencies
 		assertTrue("contained parent dependencies not considered", contains(importPackage, "javax.imageio"));
 	}
@@ -66,9 +68,24 @@ public class DifferentParentsInDifferentBundlesTest extends TestCase {
 		assertTrue("interface present on the test class ignored", contains(importPackage, "javax.swing.text"));
 		// check super class interface package
 		assertTrue("interface present on the test class ignored", contains(importPackage,
-			"javax.security.auth.callback"));
+				"javax.security.auth.callback"));
 		// check super class interface package
 		assertTrue("interface present on superclass ignored", contains(importPackage, "javax.print"));
+	}
+
+	public void testAnonymousInnerClasses() throws Exception {
+		FinalTestClassTest test = new FinalTestClassTest() {
+
+			@Override
+			public int getOffset() {
+				PrintEvent pe = new PrintEvent(new Object()) {
+				};
+				return pe.hashCode();
+			}
+		};
+
+		System.out.println("Import package");
+		String importPackage = getImportPackage(test);
 	}
 
 	private Manifest getParsedManifestFor(CaseWithVisibleMethodsBaseTest testCase) throws Exception {
@@ -87,7 +104,7 @@ public class DifferentParentsInDifferentBundlesTest extends TestCase {
 	private String getImportPackage(CaseWithVisibleMethodsBaseTest test) throws Exception {
 		Manifest mf = getParsedManifestFor(test);
 		String importPackage = mf.getMainAttributes().getValue(Constants.IMPORT_PACKAGE);
-		System.out.println("import package value is " + importPackage);
+		// System.out.println("import package value is " + importPackage);
 		return importPackage;
 	}
 
